# dlcookbook-dlbs

./: ACKNOWLEDGMENTS  CONTRIBUTING.md  ChangeLog  LICENSE  README.md
benchmarks/: caffe.json  caffe_1.json  nvcnn_docker.json  nvcnn_hvd_singularity.json  nvcnn_hvd_singularity_1.json  nvcnn_singularity.json  nvidia_caffe.json  nvtfcnn_ngc.json  nvtfcnn_ngc_19.01.json  runch.sh
docker/: .gitignore  README.md  build.py  build.sh  versions  versions.json  versions.md
docker/tensorrt/: README.md
docs/: README.md  _sidebar.md  index.html  index.md
docs/apidoc/: apidoc.md
docs/data/: data.md
docs/deep_dive/: advanced_configuration.md  architecture.md  new_frameworks.md  new_reporters.md
docs/dlpg/: dlpg.md
docs/docker/: docker.md  docker_network.md  install_docker.md  pull_build_images.md
docs/extend/: dlbs.md
docs/frameworks/: caffe.md  caffe2.md  frameworks.md  mxnet.md  pytorch.md  tensorflow.md  tensorrt.md
docs/intro/: advanced_intro.md  intro.md
docs/models/: models.md
docs/monitor/: monitor.md
docs/parameters/: parameters.md
docs/precision/: precision.md
docs/reporting/: reporting.md
docs/runtimes/: runtimes.md
docs/sysinfo/: sysinfo.md
docs/tutorials/: tutorials.md
docs/validation/: validation.md
docs2/: Makefile
docs2/source/: conf.py  index.rst
models/: .gitignore  README.md
models/bvlc_alexnet/: README.md  bvlc_alexnet.inference.prototxt  bvlc_alexnet.training.prototxt  opts
models/bvlc_googlenet/: bvlc_googlenet.perfmodel.json  bvlc_googlenet.training.prototxt  opts
models/cityscapes/: README.md  cityscapes.inference.prototxt
models/deep_mnist/: deep_mnist.json  deep_mnist.perfmodel.json  deep_mnist.training.prototxt  opts
models/densenet121/: README.md  densenet121.inference.prototxt
models/densenet161/: README.md  densenet161.inference.prototxt
models/densenet169/: README.md  densenet169.inference.prototxt
models/densenet201/: README.md  densenet201.inference.prototxt
models/eng_acoustic_model/: README.md  eng_acoustic_model.inference.prototxt  eng_acoustic_model.json  eng_acoustic_model.perfmodel.json  eng_acoustic_model.training.prototxt  opts
models/googlenet_bn/: README.md  googlenet_bn.inference.prototxt
models/inception3/: README.md  inception3.training.prototxt
models/inception4/: inception4.inference.prototxt  inception4.training.prototxt
models/mobilenet_ssd/: README.md  mobilenet_ssd.inference.prototxt
models/mtcnn_o/: README.md  mtcnn_o.inference.prototxt
models/mtcnn_p/: README.md  mtcnn_p.inference.prototxt
models/mtcnn_r/: README.md  mtcnn_r.inference.prototxt
models/resnet101/: README.md  opts  resnet101.inference.prototxt  resnet101.perfmodel.json  resnet101.training.prototxt
models/resnet152/: opts  resnet152.inference.prototxt  resnet152.perfmodel.json
models/resnet18/: README.md
models/resnet200/: generate_units.sh
models/resnet34/: README.md  resnet34.inference.prototxt
models/resnet50/: opts  resnet50.inference.prototxt  resnet50.perfmodel.json
models/sensor_net/: opts  sensor_net.inference.prototxt  sensor_net.json  sensor_net.perfmodel.json  sensor_net.training.prototxt
models/squeezenet1.0/: README.md  squeezenet1.0.inference.prototxt
models/squeezenet1.1/: README.md  squeezenet1.1.inference.prototxt
models/text_cnn/: opts  text_cnn.inference.prototxt  text_cnn.training.prototxt
models/vgg11/: vgg11.inference.prototxt
models/vgg13/: vgg13.inference.prototxt
models/vgg16/: opts  vgg16.perfmodel.json
models/vgg19/: README.md  opts  vgg19.perfmodel.json
python/: .gitignore
python/caffe2_benchmarks/: benchmarks.py  model_factory.py
python/caffe_benchmarks/: benchmarks.py  caffe_benchmark.py
python/dlbs/: README.md  bench_data.py  builder.py  exceptions.py  experimenter.py  launcher.py  logger.py  logparser.py  processor.py  python_version.py  result_processor.py  utils.py  validator.py  worker.py
python/mxnet_benchmarks/: benchmarks.py  cluster_launcher.py  data_iterator.py  model_factory.py
python/nvcnn_benchmarks/: nvcnn.py
python/nvcnn_hvd_benchmarks/: nvcnn_hvd.py
python/nvtfcnn_benchmarks/: benchmarks.py  postprocess.py
python/openvino_benchmarks/: get_model_path.py  postprocess.py
python/pytorch_benchmarks/: benchmarks.py  dataset_factory.py  model_factory.py
python/tf_cnn_benchmarks/: alexnet_model.py  alexnetorig_model.py  benchmark_cnn.py  convnet_builder.py  datasets.py  deepmnist_model.py  engacoustic_model.py  model_config.py  overfeat_model.py  preprocessing.py  resnet_model.py  (+2 more)
scripts/: environment.sh  getconfig.sh  make_imagenet_data.sh  make_report.sh  parse_options.sh  resource_monitor.sh  test_bandwidth.sh  utils.sh
src/tensorrt/: .gitignore  CMakeLists.txt  README.md  main.cpp
src/tensorrt/docs/: Doxyfile.in  README.md  benchmark_host2device.md  build.md  dataset_benchmarks.md  datasets.md  images2tensors.md  index.md  inference_benchmarks.md  mprocess_benchmarks.md  sprocess_benchmarks.md
src/tensorrt/python/: compute_mprocess_throughput.py  host2device.py
src/tensorrt/src/core/: cuda_utils.hpp  infer_engine.cpp  infer_engine.hpp  infer_msg.hpp  logger.cpp  logger.hpp  queues.hpp  queues.ipp  utils.cpp  utils.hpp
src/tensorrt/src/core/dataset/: dataset.cpp  dataset.hpp  image_dataset.cpp  image_dataset.hpp  tensor_dataset.cpp  tensor_dataset.hpp
src/tensorrt/src/core/filesystem/: file_system.cpp  file_system.hpp  hadoop_file_system.cpp  hadoop_file_system.hpp  posix_file_system.cpp  posix_file_system.hpp
src/tensorrt/src/engines/: mgpu_engine.hpp  tensorrt_engine.cpp  tensorrt_engine.hpp
src/tensorrt/src/engines/tensorrt/: calibrator.hpp  gpu_cast.cu  gpu_cast.h  profiler.hpp  tensorrt_utils.cpp  tensorrt_utils.hpp
src/tensorrt/tests/: CMakeLists.txt  test_fs.cpp  test_models.py  test_posix_fs.cpp  test_utils.cpp  tests_direct_reader.cpp  tests_ipc.cpp  tests_main.cpp  tests_queue.cpp  tests_utils.cpp
src/tensorrt/tools/: benchmark_host2device_copy.cpp  benchmark_tensor_dataset.cpp  images2tensors.cpp  tensorrt.cpp
tutorials/: .gitignore  README.md
web/: README.md  index.html
(+344 files in other folders)
